--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "build":"node index.js"
+        "build": "node index.js"
     },
     "keywords": [],
     "author": "charlie",
     "license": "ISC",
     "dependencies": {
-        "request": "^2.88.2"
+        "request": "^2.88.2",
+        "uglify-js": "^3.10.0"
     }
 }
